# AdvAlg-Stud

./: AdvAlg.sln  CMakeLists.txt  FuncViz.ods  Main.cpp  README.md
Optimization/: FunctionApproximation.cpp  FunctionApproximation.h  ImageSegmentation.cpp  ImageSegmentation.h  Optimization.vcxproj  Optimization.vcxproj.filters  PathFinding.cpp  PathFinding.h  SmallestBoundaryPolygon.cpp  SmallestBoundaryPolygon.h  TravellingSalesman.cpp  TravellingSalesman.h  WorkAssignment.cpp  WorkAssignment.h  stdafx.cpp
Solvers/: GeneticAlgo.cpp  GeneticAlgo.h  HillClimbAlgo.h  RandomOptAlgo.h
Utils/: Animlog.cpp  Animlog.h  Random.cpp  Random.h  TextLog.cpp  TextLog.h  Utils.vcxproj  Utils.vcxproj.filters
doc/: main.aux  main.tex
doc/images/ga/: Peek 2020-05-31 18-55.apng
doc/images/hc/: Peek 2020-05-31 23-51.apng
doc/images/ro/: Peek 2020-05-31 23-35.apng
